2003-03-15  Larry Ewing  <lewing@ximian.com>

	* Makefile.am: fix the server.in.in rules to use sed so that
	variables will be exapanded before being inserted in the xml.
	Also clean up the ui xml rules a little.

2003-03-13  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c: use bonobo activation instead of oaf
	for shlib factories.

2003-03-05  Larry Ewing  <lewing@ximian.com>

	* Makefile.am (uninstall-hook): add uninstall-hook to remove
	renamed binary.

2003-03-04  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: as below

	* menubar.c: turn radio/check menu items to normal ones

2003-03-03  Larry Ewing  <lewing@ximian.com>

	* Makefile.am: add defines that gnome_program_init wants.

	* popup.c: remove debug define.

2003-02-28  Larry Ewing  <lewing@ximian.com>

	* editor-control-factory.c: fix the gvalue usage.

	* body.c (body_apply_cb): set the left margin if the template
	requires it.

2003-02-25  Larry Ewing  <lewing@ximian.com>

	* image.c (set_ui): remove debug printf that could try to print
	NULL.

2003-02-24  Radek Doulik  <rodo@ximian.com>

	* popup.c (prepare_properties_and_menu): count property pages
	(property_dialog_show): use props intead of items to decide
	whether to show dialog

2003-02-12  Larry Ewing  <lewing@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: make paste quotation C-S-v

2003-02-05  Dan Winship  <danw@ximian.com>

	* editor-control-factory.c (editor_control_init): Replace
	deprecated glade_gnome_init() with glade_init()

2003-01-23  Radek Doulik  <rodo@ximian.com>

	* spell.c: removed spell_create_language_menu and language_cb as
	they are not needed any more

	* menubar.c (menubar_setup): don't create language menu

	* GNOME_GtkHTML_Editor.xml.in: removed place holder for language
	menu

2003-01-09  Radek Doulik  <rodo@ximian.com>

	* spell.c (spell_check_dialog): as below

	* properties.c (gtk_html_edit_properties_dialog_show): don't make
	properties dialog modal
